Added Repository Pattern + 3 views

--- a/OrchestraBookingTicketsApp/Views/OrchestraHistories/Index.cshtml
+++ b/OrchestraBookingTicketsApp/Views/OrchestraHistories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<OrchestraBookingTicketsApp.Models.OrchestraHistory>
+﻿@model OrchestraBookingTicketsApp.ViewModels.OrchestraHistoryModel.OrchestraHistoryViewModel
 
 @{
     ViewData["Title"] = "Index";
@@ -20,20 +20,20 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Status)
+                @Html.DisplayName("Status")
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SeatNumber)
+                @Html.DisplayName("Seat Number")
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Rating)
+                @Html.DisplayName("Rating")
             </th>
             <th></th>          
             
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
+        @foreach (var item in Model.OrchestraHistories)
         {
             <tr>
                 <td>
@@ -48,7 +48,7 @@
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.OrchestraHistoryId">Edit</a> |
                     <a asp-action="Details" asp-route-id="@item.OrchestraHistoryId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.OrchestraHistoryId">Delete</a>
+                    <a asp-action="DeleteOrchestraHistory" asp-route-id="@item.OrchestraHistoryId">Delete</a>                   
                 </td>
             </tr>
         }
