--- a/OrchestraBookingTicketsApp/Views/Locations/Index.cshtml
+++ b/OrchestraBookingTicketsApp/Views/Locations/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<OrchestraBookingTicketsApp.Models.Location>
+﻿@model OrchestraBookingTicketsApp.ViewModels.LocationModel.LocationViewModel
 
 @{
     ViewData["Title"] = "Index";
@@ -7,7 +7,7 @@
 <h2>Orchestra location</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a href='@Url.Action("AddLocation", "Locations")'>Add Location</a>
 </p>
 <link rel="stylesheet" href="~/css/Button.css">
 <style>
@@ -19,23 +19,18 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.City)
+                @Html.DisplayName("City")
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Country)
+                @Html.DisplayName("Country")
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Address)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Orchestra)
-            </th>
-            <th></th>
-            <th></th>
+                @Html.DisplayName("Address")
+            </th>          
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
+        @foreach (var item in Model.Locations)
         {
             <tr>
                 <td>
@@ -46,18 +41,7 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Address)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Orchestra.OrchestraId)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.LocationId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.LocationId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.LocationId">Delete</a>
-                </td>
-                <td>
-                    <input type="button" value="Facilities" class="btn success" onclick="location.href='@Url.Action("Index", "BuildingFacilities")'" />
-                </td>
+                </td>                
             </tr>
         }
     </tbody>
