--- a/OrchestraBookingTicketsApp/Views/Orchestras/Index.cshtml
+++ b/OrchestraBookingTicketsApp/Views/Orchestras/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<OrchestraBookingTicketsApp.Models.Orchestra>
+﻿@model OrchestraBookingTicketsApp.ViewModels.OrchestraModel.OrchestraViewModel
 
 @{
     ViewData["Title"] = "Index";
@@ -10,19 +10,19 @@
     tr:nth-child(even) {background-color: #c89797;}    
 </style>
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="AddOrchestra">Add Orchestra</a>
 </p>
 <table class="table"  BORDERCOLOR=#c89797>
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Title)
+                @Html.DisplayName("Title")
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Date)
+                @Html.DisplayName("Name")
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Price)
+                @Html.DisplayName("Price")
             </th>
             <th>
             </th>
@@ -33,7 +33,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
+        @foreach (var item in Model.Orchestras)
         {
         <tr>
             <td>
@@ -60,3 +60,5 @@
         }
     </tbody>
 </table>
+
+<input type="button" value="Locations" class="btn success" onclick="location.href='@Url.Action("Index", "Locations")'" />
