--- a/OrchestraBookingTicketsApp/Views/OrchestraHistories/Index.cshtml
+++ b/OrchestraBookingTicketsApp/Views/OrchestraHistories/Index.cshtml
@@ -14,7 +14,7 @@
 <p>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="AddOrchestraHistory">Create New</a>
 </p>
 <table class="table" BORDERCOLOR=#c89797>
     <thead>
