--- a/OrchestraBookingTicketsApp/Views/OrchestraHistories/Details.cshtml
+++ b/OrchestraBookingTicketsApp/Views/OrchestraHistories/Details.cshtml
@@ -17,7 +17,7 @@
             @Html.DisplayFor(model => model.Status)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.SeatNumber)
+            @Html.DisplayNameFor(model => model.Status)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.SeatNumber)
