Stilized login/register page

--- a/OrchestraBookingTicketsApp/Views/Orchestras/AddOrchestra.cshtml
+++ b/OrchestraBookingTicketsApp/Views/Orchestras/AddOrchestra.cshtml
@@ -13,25 +13,23 @@
         </div>
         <div class="col-10">
             <input class="form-control" type="text" asp-for="Title" />
-        </div>
+        </div><br />
     </div>
     <div class="row">
         <div class="col-2">
             Orchestra Date
-        </div>
+        </div><br />
         <div class="col-10">
-            <textarea class="form-control" asp-for="Date">
-    
-            </textarea>
+            <input type="datetime-local" id="Date" name="Date">            
         </div>
-    </div>
+    </div><br />
     <div class="row">
         <div class="col-2">
             Orchestra ticket price
         </div>
         <div class="col-10">            
             <input class="form-control" type="number" asp-for="Price" />
-        </div>
+        </div><br />
     </div>
     <br /><br />
     <div>
