--- a/OrchestraBookingTicketsApp/Areas/Identity/Pages/Account/Register.cshtml
+++ b/OrchestraBookingTicketsApp/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,30 +4,29 @@
     ViewData["Title"] = "Register";
 }
 
-<h2>@ViewData["Title"]</h2>
-
-<div class="row">
-    <div class="col-md-4">
+<link rel="stylesheet" href="~/css/Button.css"><br /><br /><br /><br /><br />
+<div class="row" style="background-color: papayawhip ; text-align: center;">
+    <div class="col-md-12">
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h4>Create a new account.</h4>
+            <h3 style="text-align: center;">Create a new account.</h3>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
+                <label asp-for="Input.Email" style="align-self: center"></label>
+                <input asp-for="Input.Email" class="form-control" style="text-align:center" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Input.Password"></label>
-                <input asp-for="Input.Password" class="form-control" />
+                <input asp-for="Input.Password" class="form-control" style="text-align:center" />
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Input.ConfirmPassword"></label>
-                <input asp-for="Input.ConfirmPassword" class="form-control" />
+                <input asp-for="Input.ConfirmPassword" class="form-control" style="text-align:center" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Register</button>
+            <button type="submit" class="btn btn-success">Register</button>
         </form>
     </div>
 </div>
