--- a/OrchestraBookingTicketsApp/Views/Shared/_Layout.cshtml
+++ b/OrchestraBookingTicketsApp/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
             @RenderBody()
             <hr />
             <footer>
-                <p>&copy; 2020 - OrchestraBookingTicketsApp</p>
+                <p>&copy; 2020 - OrchestraBookingTicketsApp <a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></p>
             </footer>
         </div>
 
