Updated Servcices on login/Reg/Logout

--- a/OrchestraBookingTicketsApp/Views/Home/Contact.cshtml
+++ b/OrchestraBookingTicketsApp/Views/Home/Contact.cshtml
@@ -31,9 +31,9 @@
         </select><br /><br />
         Comment:<br>
         <input class="form-control" type="text" rows="10" cols="30" name="comment"><br><br>
-        <input type="submit" class="btnn success" value="Send">
-        <input type="reset" class="btnn success" value="Reset">
-        <a asp-action="Index"><input type="button" value="Back" class="btnn success" /></a>
+        <input type="submit" class="btn success" value="Send">
+        <input type="reset" class="btn success" value="Reset">
+        <a asp-action="Index"><input type="button" value="Back" class="btn success" /></a>
     </form>
 </body>
 </html>
