--- a/OrchestraBookingTicketsApp/Views/Locations/AddLocation.cshtml
+++ b/OrchestraBookingTicketsApp/Views/Locations/AddLocation.cshtml
@@ -20,9 +20,7 @@
             Location Country
         </div>
         <div class="col-10">
-            <textarea class="form-control" asp-for="Country">
-    
-            </textarea>
+            <input class="form-control" type="text" asp-for="Country" />
         </div>
     </div>
     <div class="row">
@@ -30,9 +28,7 @@
             Location Address
         </div>
         <div class="col-10">
-            <textarea class="form-control" asp-for="Address">
-    
-            </textarea>
+            <input class="form-control" type="text" asp-for="Address" />
         </div>
     </div>
     
