--- a/OrchestraBookingTicketsApp/Views/LeadArtists/Index.cshtml
+++ b/OrchestraBookingTicketsApp/Views/LeadArtists/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<OrchestraBookingTicketsApp.Models.LeadArtist>
+﻿@model OrchestraBookingTicketsApp.Models.LeadArtist
 
 @{
     ViewData["Title"] = "Index";
@@ -11,45 +11,49 @@
         background-color: #c89797;
     }
 </style>
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table" BORDERCOLOR=#c89797>
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Age)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Orchestra)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Age)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Orchestra.OrchestraId)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.LeadArtistId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.LeadArtistId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.LeadArtistId">Delete</a>
-            </td>
-        </tr>
+
+@if (Model != null)
+{
+    <a asp-action="AddLeadArtist" asp-route-id="@Model.OrchestraId" asp-controller="LeadArtists">Create New</a>
+    <table class="table" BORDERCOLOR=#c89797>
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayName("Name")
+                </th>
+                <th>
+                    @Html.DisplayName("Age")
+                </th>
+                <th>
+                    @Html.DisplayName("Orchestra Title")
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => modelItem.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => modelItem.Age)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => modelItem.Orchestra.Title)
+                </td>
+                <td></td>
+                <td></td>
+            </tr>
+        </tbody>
+    </table>
 }
-    </tbody>
-</table>
+else
+{
+
+    <div>
+        <b>No Lead Artist found for this Orchestra.</b>
+    </div><br />
+}
 <div>
     <input type="button" value="Back" class="btn success" onclick="location.href='@Url.Action("Index", "Orchestras")'" />
 </div>
