Added instruments and Status control

--- a/OrchestraBookingTicketsApp/Views/Instruments/Index.cshtml
+++ b/OrchestraBookingTicketsApp/Views/Instruments/Index.cshtml
@@ -12,7 +12,7 @@
     }
 </style>
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="AddInstrument" >Create New</a>
 </p>
 <table class="table" BORDERCOLOR=#c89797>
     <thead>
