--- a/OrchestraBookingTicketsApp/Views/Instruments/AddInstrument.cshtml
+++ b/OrchestraBookingTicketsApp/Views/Instruments/AddInstrument.cshtml
@@ -1,16 +1,16 @@
-﻿@model OrchestraBookingTicketsApp.ViewModels.LeadArtistModel.AddLeadArtistViewModel
+﻿@model OrchestraBookingTicketsApp.ViewModels.InstrumentModel.AddInstrumentViewModel
 @{
-    ViewData["Title"] = "AddLeadArtist";
+    ViewData["Title"] = "AddInstrument";
 }
 
-<h2>Add Lead Artist</h2>
+<h2>AddInstrument</h2>
 
 <link rel="stylesheet" href="~/css/Button.css">
-<form asp-action="AddLeadArtist" method="post">
+<form asp-action="AddInstrument" method="post">
 
     <div class="row">
         <div class="col-2">
-            Artist Name
+           Instrument Name
         </div>
         <div class="col-10">
             <input class="form-control" type="text" asp-for="Name" />
@@ -18,10 +18,10 @@
     </div>
     <div class="row">
         <div class="col-2">
-            Age
+            Instrument type
         </div>
         <div class="col-10">
-            <input class="form-control" type="number" asp-for="Age" />
+            <input class="form-control" type="text" asp-for="Type" />
         </div>
     </div>
     <div class="row">
@@ -35,6 +35,6 @@
     <br />
     <div>
         <button type="submit" class="btn success" asp-route="Orchestras/Index">Save</button>
-        <input type="button" value="Back" class="btn success" style="float: right;" onclick="location.href='@Url.Action("Details", "Locations")'" />
+        <input type="button" value="Back" class="btn success" style="float: right;" onclick="location.href='@Url.Action("Details", "Instruments")'" />
     </div>
 </form>
