Improved visual factor and stylized pages

--- a/OrchestraBookingTicketsApp/Views/Orchestras/DeleteOrchestra.cshtml
+++ b/OrchestraBookingTicketsApp/Views/Orchestras/DeleteOrchestra.cshtml
@@ -13,7 +13,7 @@
     
     <form asp-action="DeleteOrchestra">
         <input type="hidden" asp-for="OrchestraId" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
+        <input type="submit" value="Delete" class="btn btn-success" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
