--- a/OrchestraBookingTicketsApp/Views/OrchestraHistories/DeleteOrchestraHistory.cshtml
+++ b/OrchestraBookingTicketsApp/Views/OrchestraHistories/DeleteOrchestraHistory.cshtml
@@ -12,7 +12,7 @@
 
     <form asp-action="DeleteOrchestraHistory">
         <input type="hidden" asp-for="OrchestraHistoryId" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
+        <input type="submit" value="Delete" class="btn btn-success" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
