--- a/OrchestraBookingTicketsApp/Views/Shared/_Layout.cshtml
+++ b/OrchestraBookingTicketsApp/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
 <body >    
     
 
-        <nav class="navbar navbar-inverse navbar-fixed-top">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-btn bg-danger border-bottom bg-danger mb">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -34,7 +34,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a asp-area="" asp-controller="Orchestras" asp-action="Index" class="navbar-brand">Available Orchestras</a>
+                    <a asp-area="" asp-controller="Orchestras" asp-action="Index" class="navbar-brand" style=""><b>Available Orchestras</b></a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
