--- a/OrchestraBookingTicketsApp/wwwroot/css/buy_ticket.css
+++ b/OrchestraBookingTicketsApp/wwwroot/css/buy_ticket.css
@@ -26,7 +26,7 @@
             top: 0;
             width: 100%;
             height: 100%;
-            background: rgb(0, 0, 0);
+            background: rgb(50,205,50);
             border-radius: 7px;
             text-align: center;
         }
@@ -49,7 +49,7 @@
             top: 0;
             width: 100%;
             height: 100%;
-            background: #00587B;
+            background: rgb(50,205,50);
             border-radius: 7px;
             text-align: center;
         }
