--- a/OrchestraBookingTicketsApp/Views/Locations/Details.cshtml
+++ b/OrchestraBookingTicketsApp/Views/Locations/Details.cshtml
@@ -12,6 +12,7 @@
         background-color: #c89797;
     }
 </style>
+<a asp-action="AddLocation" asp-controller="Locations">Create New</a>
 <table class="table" BORDERCOLOR=#c89797>
     <thead>
         <tr>
