--- a/OrchestraBookingTicketsApp/Views/Locations/Index.cshtml
+++ b/OrchestraBookingTicketsApp/Views/Locations/Index.cshtml
@@ -5,7 +5,9 @@
 }
 
 <h2>All locations</h2>
-
+<p>
+    <a asp-action="AddLocation">Add Location</a>
+</p>
 
 <link rel="stylesheet" href="~/css/Button.css">
 <style>
