--- a/OrchestraBookingTicketsApp/Views/Shared/_Layout.cshtml
+++ b/OrchestraBookingTicketsApp/Views/Shared/_Layout.cshtml
@@ -42,7 +42,14 @@
                         <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                         <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                         <li><a asp-area="" asp-controller="Home" asp-action="Gallery">Gallery</a></li>
-                        <li><a asp-area="" asp-controller="OrchestraHistories" asp-action="Index">Orchestra Booking History </a></li>                        
+                        @if (User.IsInRole("Administrator"))
+                        {
+                            <li><a asp-area="" asp-controller="Users" asp-action="Index">Users</a></li>
+                        }
+                        @if (User.IsInRole("User"))
+                        {
+                            <li><a asp-area="" asp-controller="OrchestraHistories" asp-action="Index">Orchestra Booking History </a></li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
